migracion terminada, make funcionando, tutii aposto

--- a/back/package.json
+++ b/back/package.json
@@ -6,6 +6,7 @@
 	"scripts": {
 		"start": "tsx src/index.ts",
 		"build": "tsc",
+		"seed": "tsx src/seed-data.ts",
 		"serve": "node dist/server.js",
 		"test": "vitest noseque"
 	},
