--- a/back/Dockerfile
+++ b/back/Dockerfile
@@ -1,12 +1,9 @@
 FROM node:22-alpine
-RUN apk add --no-cache python3 make g++ sqlite
+RUN apk add --no-cache python3 make g++
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN mkdir -p data
 RUN npm run build
-COPY docker-entrypoint.sh /usr/local/bin/
-RUN chmod +x /usr/local/bin/docker-entrypoint.sh
 EXPOSE 3000
 CMD ["npm", "start"]
