oAuth con github, falta manejar error duplicado

--- a/back/.env.example.bueno.shiny
+++ b/back/.env.example.bueno.shiny
@@ -8,3 +8,6 @@ DB_PORT=3306
 DB_USER=transcendence42
 DB_PASSWORD=transcendence42
 DB_NAME=transcendence
+
+GITHUB_CLIENT_ID=Ov23lisb4EhThkr5xCQ4
+GITHUB_CLIENT_SECRET=05dfdbe398c52f174254c05d2a121a25c7806439
