--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
       - ./back/.env # Carga las variables desde back/.env
     environment:
       - NODE_ENV=development
+      - DB_HOST=mariadb
     restart: on-failure
     networks:
       - trascendence-network
