--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - ./back/src:/app/src
       - /app/node_modules
     env_file:
-      - ./back/.env # Carga las variables desde back/.env
+      - ./back/.env 
     environment:
       - NODE_ENV=development
       - DB_HOST=mariadb
@@ -30,7 +30,7 @@ services:
       - trascendence-network
     depends_on:
       mariadb:
-        condition: service_healthy  # <--- Esta es la clave
+        condition: service_healthy
 
   mariadb:
     
