--- a/back/package.json
+++ b/back/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.1.0",
+		"@fastify/jwt": "^10.0.0",
 		"@fastify/websocket": "^11.2.0",
 		"bcrypt": "^6.0.0",
 		"dotenv": "^17.2.3",
