--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
 		"vite": "^7.2.2"
 	},
 	"dependencies": {
+		"react-icons": "^5.5.0",
 		"@emotion/react": "^11.14.0",
 		"@emotion/styled": "^11.14.1",
 		"@fontsource/montserrat": "^5.2.8",
