--- a/back/.env.shiny
+++ b/back/.env.shiny
@@ -13,3 +13,11 @@ GITHUB_CLIENT_ID=Ov23lisb4EhThkr5xCQ4
 GITHUB_CLIENT_SECRET=05dfdbe398c52f174254c05d2a121a25c7806439
 
 FRONTEND_URL=http://localhost:5173
+
+# docker-compose up -d adminer
+#accedemos a adminer desde localhost:8081 para visualizar la base de datos
+# Motor de base de datos	MySQL
+# Servidor mariadb	
+# Usuario transcendence42	
+# Contraseña transcendence42
+# Base de datos transcendence
