--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,14 @@ services:
       retries: 3
       start_period: 10s
 
+  adminer:
+    image: adminer
+    ports:
+      - 8081:8080
+    container_name: adminer
+    networks:
+      - trascendence-network
+
 volumes:
     mariadb_data:
 
