--- a/back/.env.shiny
+++ b/back/.env.shiny
@@ -21,3 +21,5 @@ FRONTEND_URL=http://localhost:5173
 # Usuario transcendence42	
 # Contraseña transcendence42
 # Base de datos transcendence
+
+#para entrar ala docu de las apis, ir a http://localhost:3000/documentation
