--- a/back/package.json
+++ b/back/package.json
@@ -14,7 +14,9 @@
 		"@fastify/cookie": "^11.0.2",
 		"@fastify/cors": "^11.1.0",
 		"@fastify/jwt": "^10.0.0",
+		"@fastify/multipart": "^9.4.0",
 		"@fastify/rate-limit": "^10.3.0",
+		"@fastify/static": "^9.0.0",
 		"@fastify/swagger": "^9.7.0",
 		"@fastify/swagger-ui": "^5.2.5",
 		"@fastify/websocket": "^11.2.0",
