--- a/back/package.json
+++ b/back/package.json
@@ -25,6 +25,7 @@
 		"fastify": "^5.6.2",
 		"jsonwebtoken": "^9.0.3",
 		"mysql2": "^3.11.0",
+		"ngrok": "^5.0.0-beta.2",
 		"tsx": "^4.20.6"
 	},
 	"devDependencies": {
